--- a/flame/models/uiui/dev/parameters.yaml
+++ b/flame/models/uiui/dev/parameters.yaml
@@ -1,15 +1,15 @@
 # system settings
 verbose_error: true
 numCPUs: 2
+mol_batch: objects                     # series | objects | auto
 
 # input settings
-input_type: molecule                  # molecule | data
+input_type: molecule                  # molecule | data | ext_data
 normalize_method: 
 - standardize                         # null | standardize
 ionize_method: null                   # null | moka
 convert3D_method: null                # null | ETKDG
 computeMD_method:                     # RDKit_properties | RDKit_md | custom
-- RDKit_md
 - RDKit_properties
 
 ext_input: false                      # external input source TRUE
@@ -20,7 +20,10 @@ model_set:                            # list of models used for producing input
   version: 2
 
 # Output 
-output_format: JSON                   # JSON | TSV
+output_format:                        # JSON | TSV  (dump results to output.tsv and errors to error.tsv)
+- JSON      
+- TSV             
+output_md: false                      # if true dump the MD generated to 'output_md.tsv'
 
 # SDFile settings
 SDFile_activity: activity             # str
@@ -30,8 +33,8 @@ SDFile_name: GENERIC_NAME             # str
 # modeling settings
 modelingToolkit: internal             # internal | R | KNIME
 model: RF                             # RF | SVM
-modelAutoscaling: true                # true | false
-quantitative: false
+modelAutoscaling: false               # true | false
+quantitative: true
 tune: false
 
 ModelValidationCV: loo
@@ -104,5 +107,5 @@ RF_optimize:
   - 46
 
 # conformal predictor settings
-conformal: false
+conformal: true
 conformalSignificance: 0.2
