--- a/flame/models/rrrrr/dev/parameters.yaml
+++ b/flame/models/rrrrr/dev/parameters.yaml
@@ -1,17 +1,15 @@
 # system settings
-verbose_error: false
-numCPUs: 1
-mol_batch: objects                    # series | objects | auto (not implemented!)
+verbose_error: true
+numCPUs: 2
+mol_batch: objects                     # series | objects | auto
 
 # input settings
 input_type: molecule                  # molecule | data | ext_data
-normalize_method:                     # null | standardize
-- standardize             
-
+normalize_method: 
+- standardize                         # null | standardize
 ionize_method: null                   # null | moka
 convert3D_method: null                # null | ETKDG
 computeMD_method:                     # RDKit_properties | RDKit_md | custom
-- RDKit_md
 - RDKit_properties
 
 ext_input: false                      # external input source TRUE
@@ -25,7 +23,7 @@ model_set:                            # list of models used for producing input
 output_format:                        # JSON | TSV  (dump results to output.tsv and errors to error.tsv)
 - JSON      
 - TSV             
-output_md: true                      # if true dump the MD generated to 'output_md.tsv'
+output_md: false                      # if true dump the MD generated to 'output_md.tsv'
 
 # SDFile settings
 SDFile_activity: activity             # str
