--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - statsmodels=0.8.0
   - rdkit=2017.09.3.0
   - pyyaml
+  - requests
   - pip:
      - "https://github.com/phi-grib/standardiser/archive/master.zip"
      - "https://github.com/josecarlosgomezt/nonconformist/archive/master.zip"
